# incolumepy.dataclass

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
incolumepy/prospect/dataclass/: __init__.py
incolumepy/prospect/dataclass/arjancodes/: ex01_nodataclass.py  ex02_nodataclass.py  ex03_dataclass.py  ex04_dataclass.py  ex05_dataclass.py  ex06_dataclass.py  ex07_dataclass.py  ex08_dataclass.py  ex09_dataclass.py  ex10_dataclass.py  ex11_dataclass.py  ex12_dataclass.py  ex13_dataclass.py  ex14_dataclass.py  ex15_dataclass.py  ex16_dataclass.py  utils.py
incolumepy/prospect/dataclass/atos/: prototipo.py
incolumepy/prospect/dataclass/atos/auth/: auth_firebase.py  auth_goog_api.py
tests/: __init__.py  conftest.py  test_incolumepy_prospect_dataclass.py
